fix : navbar visibiliy; change the color in style.less

--- a/src/client/stylesheets/style.less
+++ b/src/client/stylesheets/style.less
@@ -55,6 +55,11 @@ The production configuration for webpack needs to be finalized before using this
 	border: none !important;
 }
 
+
+.navbar-toggle {
+	background-color: #754e37 !important;
+}
+
 /* Overwrite button primary colour to retain default bootstrap meaning */
 @btn-primary-bg:                 darken(#428bca, 6.5%);
 @btn-primary-border:             darken(#428bca, 6.5%);
